--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -13,15 +13,15 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Pompompurin is love. Pompompurin is life.</span>
+            <span id="quote"></span>
         </div>
          <!-- Author -->
         <div class="quote-author">
-            <span id="author">Brooke</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
-            <button class="twitter-buton" id="twitter" title="Tweet This!">
+            <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
             <button id="new-quote">New Quote</button>
@@ -30,6 +30,7 @@
    
    
     <!-- Script  -->
-    <script src="script.js"></script>
+    <script src="quotes.js"></script>
+    <script src="script.js"></script>   
 </body>
 </html>
