--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -28,7 +28,8 @@
         </div>
     </div>
     <!-- Loader -->
-    <div class="loader" id="loader"></div>  
+    <div class="loader" id="loader"></div> 
+    <img src="Pompom.webp"> 
     <!-- Script  -->
     <script src="quotes.js"></script>
     <script src="script.js"></script>   
