adding NASA API fixes

--- a/nasa/index.html
+++ b/nasa/index.html
@@ -5,21 +5,25 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>NASA Image/Video Projector</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-
-		<h1>Picture of the Day</h1>
+		<div class="fade-in">
+			<h1>Image/Video of the Day</h1>		
+		</div>
 		<input type="date" name="" value="">
-		<button type="button" name="button">Media</button>
+		<button type="button" name="button">Let's Explore!</button>
+		
 
-		<h2>Image:</h2>
+		<h2></h2>
+
 		<img src="" alt="">
-		<h3>Explanation</h3>
+
+		<h3></h3>
 		<iframe src="" class = '' frameborder="0"></iframe>
 
 		<script type="text/javascript" src="js/main.js"></script>
