--- a/nasa/index.html
+++ b/nasa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
+    	<meta name="description" content="See the image or video of the day from NASA!">
     	<meta name="keywords" content="one, two, three">
 
 		<title>NASA Image/Video Projector</title>
