--- a/movie-finder/index.html
+++ b/movie-finder/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="style.css">
-    <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https//code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <title>Movie Finder</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <ul id="cast"></ul>
     </section>
     <section>
-        <img src="" alt= "Movie Poster Is Missing!">
+        <img src="" alt= "">
     </section>
     <script src="/main.js"></script>
 </body>
