--- a/lets-make-a-meal/index.html
+++ b/lets-make-a-meal/index.html
@@ -39,14 +39,15 @@
             <p class="initial message">Welcome to Let's Make A Meal! A community where cooking lovers all come together to post their favorite recipes and make shopping lists for ingredients. Click below to check out some of the latest recipes!</p>
         </section>
         <div class="front-page-buttons">
-                <span class="logging-in">Login</span>
-                <span class="see-recipes">See Recipes</span>
-                <span class="about-us">About Us</span>
+                <span class="logging-in"><a href="">Login</a></span>
+                <span class="see-recipes"><a href="">See Recipes</a></span>
+                <span class="about-us"><a href="#about">About Us</a></span>
         </div>
         <div></div>
     </header>
-    <section class="about-section">
+    <section class="about-section" id="about">
         <h2>About Us</h2>
+        <p class="first-about-line">After looking at countless recipes online, Brooke (the creater of "Let's Make A Meal") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically dissapear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make A Meal", Brooke and other users were able to browse different recipes, add the ingridents they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -57,7 +58,7 @@
     <footer>
         <section></section>
         <section>
-            FOOTER HERE FOR NOW
+            <p>For all questions and inquiries, please email us at <a href="" class="email-bottom">sampleemail@gmail.com</a> and we will respond to you within 24-48 hours.</p>
         </section>
         <section></section>
     </footer>
