adding additional items

--- a/restaurant-template/index.html
+++ b/restaurant-template/index.html
@@ -248,19 +248,9 @@
             <h1 class="display 4"><b>History</b></h1>
             <p class="fs-2">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quidem aut asperiores eaque in omnis cupiditate laudantium, quod magni modi porro quaerat inventore architecto iste fugit odio sequi, quis nobis sint consequuntur odit vero! Aliquid earum, ab beatae praesentium eos pariatur sequi minima obcaecati est blanditiis unde dicta dolor minus aliquam consequatur expedita ducimus possimus nisi officiis? Esse, a exercitationem.
-            </p>
-            <div class="row">
-                <!-- shrinking the space based on how big our elements are -->
-                <!-- numbers are offsetting the paragraph and picture -->
-                <div class="col-lg-9 col-md-8 col-sm-12">
-                    <p class="fs-2"><b>The Chef? </b>Mr. Lee Himself. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto temporibus, sit aperiam facere delectus libero expedita illo dolor odio quasi magni labore praesentium hic quisquam nisi, perferendis optio? Ratione ut aut optio provident necessitatibus. Animi culpa autem aperiam similique suscipit asperiores distinctio atque, error ducimus, amet facere consequatur. Voluptatum, eum.</p>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-12 text-end">
-                    <img src="assets/chef.jpg" alt="Chef Image" style="width: 200px;" class="rounded-circle">
-                </div>
-            </div>
-            <p class="fs-2">We are proud of our food!</p>
+            </p>     
             <img src="assets/restaurant.jpg" alt="Restaurant Image" style="width: 100%" class="my-3 img-grayscale">
+            <p class="fs-2 food-happy">We are proud of our food!</p>
         </div>
 
     </div>
